test/spec_vectors/data/fail/module_64.wat
(module (global (import "test" "global-mut-i32") (mut i32)) (memory 1) (data (global.get 0)))